<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.quasardb</groupId>
  <artifactId>jni</artifactId>
  <packaging>jar</packaging>
  <version>3.8.12-SNAPSHOT</version>
  <name>quasardb</name>

  <description>
    API for the JNI components of the QuasarDB API for Java. Should not be included directly.
  </description>

  <url>http://www.quasardb.net/</url>
  <licenses>
    <license>
      <name>3-Clause BSD License</name>
      <url>https://opensource.org/licenses/BSD-3-Clause</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <url>https://github.com/bureau14/qdb-api-jni</url>
    <connection>scm:git:git://github.com/bureau14/qdb-api-jni.git</connection>
    <developerConnection>scm:git:git@github.com:bureau14/qdb-api-jni.git</developerConnection>
  </scm>
  <developers>
    <developer>
      <email>leon@quasardb.net</email>
      <name>Leon Mergen</name>
      <url>https://github.com/solatis</url>
      <id>solatis</id>
    </developer>
  </developers>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.28</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.28</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.2.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-core</artifactId>
      <version>1.23</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-generator-annprocess</artifactId>
      <version>1.23</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.7</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <skipIfEmpty>true</skipIfEmpty>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <compilerArgs>
            <arg>-h</arg>
            <arg>target/headers</arg>
          </compilerArgs>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>package-sources</id>
            <phase>package</phase>
            <goals>
              <goal>jar-no-fork</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
        <executions>
          <execution>
            <id>package-javadocs</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.5</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
            <configuration>
              <keyname>0C2BFAEE6F2D7CCCFB2CA6CC0A33FB160E187974</keyname>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8.2</version>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
        <dependencies>
          <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-surefire-provider</artifactId>
            <version>1.2.0</version>
          </dependency>
        </dependencies>
        <configuration>
          <trimStackTrace>false</trimStackTrace>
          <additionalClasspathElements>
            <additionalClasspathElement>${project.basedir}/target/jni-3.8.12-SNAPSHOT-linux-x86_64.jar</additionalClasspathElement>
            <additionalClasspathElement>${project.basedir}/target/jni-3.8.12-SNAPSHOT-osx-x86_64.jar</additionalClasspathElement>
            <additionalClasspathElement>${project.basedir}/target/jni-3.8.12-SNAPSHOT-freebsd-x86_64.jar</additionalClasspathElement>
            <additionalClasspathElement>${project.basedir}/target/jni-3.8.12-SNAPSHOT-windows-x86_64.jar</additionalClasspathElement>
            <additionalClasspathElement>${project.basedir}/target/jni-3.8.12-SNAPSHOT-windows-x86_32.jar</additionalClasspathElement>
          </additionalClasspathElements>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>attach-artifacts</id>
            <phase>package</phase>
            <goals>
              <goal>attach-artifact</goal>
            </goals>
            <configuration>
              <artifacts>
                <artifact>
                  <file>${project.basedir}/target/jni-3.8.12-SNAPSHOT-linux-x86_64.jar</file>
                  <type>jar</type>
                  <classifier>linux-x86_64</classifier>
                </artifact>
                <artifact>
                  <file>${project.basedir}/target/jni-3.8.12-SNAPSHOT-osx-x86_64.jar</file>
                  <type>jar</type>
                  <classifier>osx-x86_64</classifier>
                </artifact>
                <artifact>
                  <file>${project.basedir}/target/jni-3.8.12-SNAPSHOT-freebsd-x86_64.jar</file>
                  <type>jar</type>
                  <classifier>freebsd-x86_64</classifier>
                </artifact>
                <artifact>
                  <file>${project.basedir}/target/jni-3.8.12-SNAPSHOT-windows-x86_64.jar</file>
                  <type>jar</type>
                  <classifier>windows-x86_64</classifier>
                </artifact>
                <artifact>
                  <file>${project.basedir}/target/jni-3.8.12-SNAPSHOT-windows-x86_32.jar</file>
                  <type>jar</type>
                  <classifier>windows-x86_32</classifier>
                </artifact>
              </artifacts>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

</project>
